--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
-1. показать мике дизайн.
-4. дать доступ мике на гитхаб
-5. название сайта
-6. что в футере и будет ли он
-7. утвердить карту
-8. понять что делать с городами которых нету на tripplanet
-9. иконка
-10. текст на главной
+1. показать мике дизайн. +
+4. дать доступ мике на гитхаб +
+5. название сайта +
+7. утвердить карту +
+9. иконка +
+10. текст на главной - мике сделает
 
 1Ноябрьск -
 2Златоуст -
@@ -29,7 +27,7 @@
 20Муром
 21Старый Оскол
 22Бийск
-23Орёл +
+23Орёл done
 24 choose any (bacause we need one more to page look good)
 
 also needed one image from each page to fill main page (just add one to main img folder )
