--- a/todo.txt
+++ b/todo.txt
@@ -17,14 +17,14 @@
 10Назрань -
 11Каспийск -
 12Улан-Удэ done
-13Майкоп
+13Майкоп *
 14Находка
 15Арзамас
 16Серпухов - 
 17Армавир
 18Железногорск
 19Обнинск
-20Муром
+20Муром *
 21Старый Оскол
 22Бийск
 23Орёл done
