--- a/todo.txt
+++ b/todo.txt
@@ -5,28 +5,28 @@
 9. иконка +
 10. текст на главной - мике сделает
 
-1Ноябрьск -
+1Ноябрьск - *
 2Златоуст -
-3Сургут -
+3Сургут - *
 4Кисловодск done
-5Первоуральск -
-6Энгельс -
+5Первоуральск - *
+6Энгельс - *
 7Сызрань -
 8Таганрог done
 9Нижнекамск -
 10Назрань -
-11Каспийск -
+11Каспийск - *
 12Улан-Удэ done
 13Майкоп *
-14Находка
-15Арзамас
+14Находка *
+15Арзамас *
 16Серпухов - 
-17Армавир
-18Железногорск
-19Обнинск
+17Армавир *
+18Железногорск *
+19Обнинск *
 20Муром *
-21Старый Оскол
-22Бийск
+21Старый Оскол *
+22Бийск *
 23Орёл done
 24 choose any (bacause we need one more to page look good)
 
