--- a/todo.txt
+++ b/todo.txt
@@ -6,12 +6,12 @@
 10. текст на главной - мике сделает
 
 1Ноябрьск *
-2Златоуст ∞ done https://susanintop.com/evropa/rossija/cheljabinskaja-oblast/zlatoust
+2Златоуст ∞ done https://susanintop.com/evropa/rossija/cheljabinskaja-oblast/zlatoust + info
 3Сургут * 
 4Кисловодск ∞ done
 5Первоуральск *
 6Энгельс *
-7Сызрань ∞ done https://yandex.ru/turbo/tur-ray.ru/s/syzran-attractions.html
+7Сызрань ∞ done https://yandex.ru/turbo/tur-ray.ru/s/syzran-attractions.html 
 8Таганрог ∞ done
 9Нижнекамск ∞ done http://narslovar.ru/nizhnekamsk.html
 10Назрань ∞ done https://www.komandirovka.ru/sights/nazran/
@@ -28,7 +28,7 @@
 21Старый Оскол *
 22Бийск * https://kudarf.ru/sibir/altaj/bijsk-dostoprimechatelnosti.html
 23Орёл ∞ done
-24Сыктывкар ∞ done http://narslovar.ru/syiktyivkar.html
+24Сыктывкар ∞ http://narslovar.ru/syiktyivkar.html
 
 also needed one image from each page to fill main page (just add one to main img folder )
 
@@ -41,7 +41,6 @@ https://unknown-explorer5483.github.io/project2/index.html - mainmage
 Общая статистика города:
  1.численность.
  2.стоимость отелей и съёмных квартир (либо то либо то).
- 3.чем занимается.
  4.средняя температура(климат).
  5.часовой поляс.
  6.расстояние от Москвы.
@@ -49,3 +48,97 @@ https://unknown-explorer5483.github.io/project2/index.html - mainmage
  8.дата основания.
  
  Незнаете куда поехать? Хотите увидеть что-то новое? Этот сайт как раз таки был создан для того, чтобы рассказать о непопулярных, но интересных направлениях туризма в России. На этом сайте вы можете увидеть 
+
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:*.</p>
+<p>Средняя стоимость отелей: от ** до **руб.</p>
+<p>Среднегодовая температура воздуха: * °C.</p>
+<p>Часовой зона: МСК*.</p>
+<p>Расстояние от Москвы:* км.</p>
+<p>Основан в * .</p>
+
+
+
+4.
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:128 779.</p>
+<p>Средняя стоимость отелей: от 2000 до 5000руб.</p>
+<p>Среднегодовая температура воздуха — 6,5 °C</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:1366 км.</p>
+<p>Основан в 1803 год.</p>
+
+7.
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:167 160.</p>
+<p>Средняя стоимость отелей: от 500 до 3000руб.</p>
+<p>Cреднегодовая температура воздуха — 5,4 °C</p>
+<p>Часовой зона: МСК+4.</p>
+<p>Расстояние от Москвы:895 км.</p>
+<p>Основан в 1683 году .</p>
+
+8.
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:248 643.</p>
+<p>Средняя стоимость отелей: от 1500 до 3000руб.</p>
+<p>Среднегодовая температура воздуха + 10,3 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:953 км.</p>
+<p>Основан в 1698 году.</p>
+
+9.
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:240 020.</p>
+<p>Средняя стоимость отелей: от 2500 до 3500руб.</p>
+<p>Среднегодовая температура воздуха +4 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:887 км.</p>
+<p>Основан в 1961 году.</p>
+
+10.Назрань
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:122 261.</p>
+<p>Средняя стоимость отелей: от 2000 до 3000руб.</p>
+<p>Среднегодовая температура воздуха +9,5 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:1483 км.</p>
+<p>Основан в 1781 году.</p>
+
+12.Улан-Удэ
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:439 128.</p>
+<p>Средняя стоимость отелей: от 2100 до 4500руб.</p>
+<p>Среднегодовая температура: −0,1 °C.</p>
+<p>Часовой зона: МСК+8.</p>
+<p>Расстояние от Москвы:4419 км.</p>
+<p>Основан в 1666 году.</p>
+
+16.Серпухов
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:126 273.</p>
+<p>Средняя стоимость отелей: от 1500 до 4000руб.</p>
+<p>Среднегодовая температура воздуха: +5 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:94 км.</p>
+<p>Основан в 1339 году.</p>
+
+23. Орёл
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:308 838.</p>
+<p>Средняя стоимость отелей: от 1000 до 3500руб.</p>
+<p>Среднегодовая температура воздуха: +5,6 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:325 км.</p>
+<p>Основан в 1566 году.</p>
+
+24.Сыктывкар
+<div class="subtitle">НЕмного информации:</div>
+<p>Население:244 403.</p>
+<p>Средняя стоимость отелей: от 2000 до 4000руб.</p>
+<p>Среднегодовая температура — +1,3 °C.</p>
+<p>Часовой зона: МСК+3.</p>
+<p>Расстояние от Москвы:1004 км.</p>
+<p>Основан в 1780 году.</p>
+
+
+
